tests/integration/snapshots/integration__conformance__n_array_unclosed.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[""
stdout ---

stderr ---
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:3
  |
1 | [""
  | - ^
  | |
  | expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | [""]
  |    +
