tests/integration/snapshots/integration__conformance__n_array_unclosed_trailing_comma.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[1,
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:1:3
  |
1 | [1,
  |   ^
  |   |
  |   expected due to `,`
  |
help: insert a placeholder value
  |
1 | [1, "rust is a must"
  |     ++++++++++++++++
