tests/integration/snapshots/integration__conformance__n_array_unclosed_with_new_lines.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[1,
1
,1
stdout ---

stderr ---
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:3:2
  |
1 | [1,
  | - expected due to `[`
2 | 1
3 | ,1
  |  ^
  |
help: insert the missing closed delimiter `]`
  |
3 | ,1]
  |   +
